--- a/src/util/rivet-icon-element.css
+++ b/src/util/rivet-icon-element.css
@@ -2,7 +2,7 @@
 Copyright (C) 2018 The Trustees of Indiana University
 SPDX-License-Identifier: BSD-3-Clause
 */
-rvt-icon {
+rvt-react-icon {
   --name: 0;
   align-items: center;
   display: inline-flex;
@@ -11,14 +11,14 @@ rvt-icon {
   width: min-content;
 }
 
-rvt-icon:not(:defined)::before {
+rvt-react-icon:not(:defined)::before {
   content: "";
   display: block;
   height: 1rem;
   width: 1rem;
 }
 
-rvt-icon > svg {
+rvt-react-icon > svg {
   flex-shrink: 0;
   transition: z-index 0.001ms step-start;
   z-index: var(--name);
